--- a/src/components/topbar-menu/topbar-menu.style.scss
+++ b/src/components/topbar-menu/topbar-menu.style.scss
@@ -1,10 +1,16 @@
 .topBarContainer {
+  position: fixed;
   background-color: #fff;
+  top: 0px;
+  left: 0px;
   height: 10rem;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 3rem;
+  box-shadow: 3px 0px 20px 0px #0000000a;
+  z-index: 100;
 
   .search {
     position: relative;
@@ -43,6 +49,7 @@
     .docs {
       padding: 0;
       background-color: #fff;
+      color: #213f7d;
       font-weight: 500;
       border: none;
       text-decoration: underline;
@@ -57,6 +64,7 @@
       padding: 0;
       font-size: 1.6rem;
       font-weight: 500;
+      color: #213f7d;
       background-color: #fff;
       border: none;
 
