--- a/src/components/usersTable/usersTable.style.scss
+++ b/src/components/usersTable/usersTable.style.scss
@@ -2,4 +2,37 @@
   border: none;
   padding: 0;
   background-color: #fff;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.statusPill {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+  padding: 0.7rem 1.4rem;
+  border-radius: 100px;
+  font-weight: 400;
+}
+
+.grayPill {
+  background: #f5f5f7;
+  color: #545f7d;
+}
+
+.yellowPill {
+  background-color: #fdf7e5;
+  color: #e9b200;
+}
+
+.redPill {
+  background-color: #fce6eb;
+  color: #e4033b;
+}
+
+.greenPill {
+  background-color: #f3fcf6;
+  color: #39cd62;
 }
