--- a/src/routes/login-page/login-page.style.scss
+++ b/src/routes/login-page/login-page.style.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  padding: 0 4em 0 4em;
+  padding: 0 0 0 4em;
   background-color: #fff;
   height: 100vh;
   .left-side {
@@ -24,5 +24,28 @@
     align-items: center;
     box-shadow: 0px 15px 90px 0px #00000008;
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 1130px) {
+  .containerLoginPage {
+    padding: 0 4em 0 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .left-side {
+      display: none;
+    }
+    .right-side {
+      position: relative;
+      max-width: 90%;
+      width: 100%;
+    }
+    &::before {
+      position: absolute;
+      content: url("../../assets/img/company-login-page-logo.svg");
+      top: 7rem;
+      left: 18rem;
+    }
   }
 }
