--- a/src/components/sidebar/sidebar.style.scss
+++ b/src/components/sidebar/sidebar.style.scss
@@ -107,3 +107,9 @@ $Backgroudcolor: #fff;
     }
   }
 }
+
+@media screen and (max-width: 600px) {
+  .sidebarContainer {
+    display: none;
+  }
+}
