--- a/src/components/usersPageCards/usersPageCards.style.scss
+++ b/src/components/usersPageCards/usersPageCards.style.scss
@@ -4,3 +4,9 @@
   gap: 2.6rem;
   margin-top: 4rem;
 }
+
+@media screen and (max-width: 999px) {
+  .userPageCards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
